fix: fix overflowing layout when mock result is too long

--- a/src/editor/dialogs/edit-variable-dialog/EditVariableDialog.scss
+++ b/src/editor/dialogs/edit-variable-dialog/EditVariableDialog.scss
@@ -9,4 +9,11 @@
       margin-bottom: 4px;
     }
   }
+  .bp3-form-content {
+    min-width: 0;
+  }
+  .result {
+    overflow-wrap: break-word;
+    display: block;
+  }
 }
